--- a/aipage.html
+++ b/aipage.html
@@ -518,7 +518,7 @@
 
   <script>
     // Pre-configured API key for immediate use
-    const apiKey = "AIzaSyATcTLlUa8OxAu0h5g31V2m3XO0kkT4c-c";
+    const apiKey = "abcde"; //sample api
     
     // Sample chat responses for demo (fallback)
     const sampleChatResponses = [
@@ -695,4 +695,5 @@
     });
   </script>
 </body>
+
 </html>
