--- a/login.html
+++ b/login.html
@@ -409,15 +409,15 @@
 
   <script>
     // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyA7hWS-We4o-l_qcB0oAL_m2PAwwCyvyt8",
-      authDomain: "hackathon-2be2d.firebaseapp.com",
-      projectId: "hackathon-2be2d",
-      storageBucket: "hackathon-2be2d.firebasestorage.app",
-      messagingSenderId: "734876539576",
-      appId: "1:734876539576:web:301198c2516944f3ae324d"
-    };
-
+    
+const firebaseConfig = {
+  apiKey: "AIzaSyExample12345",
+  authDomain: "myapp.firebaseapp.com",
+  projectId: "myapp",
+  storageBucket: "myapp.appspot.com",
+  messagingSenderId: "123456789",
+  appId: "1:123456789:web:abcdef123456"
+};
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
@@ -628,3 +628,4 @@
   </script>
 </body>
 </html>
+
